--- a/main.html
+++ b/main.html
@@ -3,11 +3,53 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<style>
+		
+.container {
+	background-color: lightgray;
+    width: 350px;
+	margin: 50px auto; 
+    padding:  30px;
+    border: 5px solid black;
+    border-radius: 40px; 
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+}
+
+/* Circular blocks */
+.circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%; 
+    display: inline-block;
+}
+
+
+.green {
+    background-color: green;
+}
+
+.yellow {
+    background-color: yellow;
+}
+
+.red {
+    background-color: red;
+}
+
+	</style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	
+	 <div class="container">
+        <div class="circle green"></div>
+        <div class="circle yellow"></div>
+        <div class="circle red"></div>
+    </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
